fix spacing

--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@ body {
         margin: 4.75rem auto;
     }
 }
-
 @media (max-width:414px) {
   .email{
     font-size: 1.5rem;
@@ -112,9 +111,6 @@ body {
   }
   
 }
-
-
-
 .close {
     font-size: 2.5rem !important;
 }
@@ -144,49 +140,39 @@ body {
     left: -12.5vw;
     transform: translate(-50%,-50%);
 }
-/* #myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
-  }
-  * {
-    box-sizing: border-box;
-  } */
 
-  #aboutMe{
-    margin-top: 2%;
-  }
+#aboutMe{
+  margin-top: 2%;
+}
 
- .order-2{
-    display: -webkit-inline-box !important;
-  }
+.order-2{
+  display: -webkit-inline-box !important;
+}
  
-  .nav-link{
-    display: inline-block;
-    position: relative;
-    color: #49D4A0;
-  }
-  .nav-link:after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #49D4A0;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-  }
+.nav-link{
+  display: inline-block;
+  position: relative;
+  color: #49D4A0;
+}
+.nav-link:after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #49D4A0;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
 .nav-link:hover:after{
-    transform: scaleX(1);
-  transform-origin: bottom left;
+  transform: scaleX(1);
+transform-origin: bottom left;
 }
 
 .hover-rotate{
-    overflow: hidden;
+  overflow: hidden;
   margin: 8px;
   min-width: 240px;
   max-width: 320px;
@@ -214,15 +200,13 @@ body {
 	transition: all 0.4s ease 0s;
 }
 .vl {
-    color: #49D4A0;
-    font-size: xx-large;
-    /* height: 1px; */
-    /* #65b5f6 */
-  }
-
-
+  color: #49D4A0;
+  font-size: xx-large;
+  /* height: 1px; */
+  /* #65b5f6 */
+}
 #photo-button{
-    background-color: transparent;
+  background-color: transparent;
   border-color: burlywood;
   /* #65b5f6 */
   font-size: x-large;
@@ -234,38 +218,38 @@ body {
 	-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
 	transition: all 0.4s ease 0s;}
 /* #stick{
-    position:fixed;
+  position:fixed;
 } */
 
 
-  #bigCollapse2{
-    padding: 32px;
-  }
-  #overlay{
-    background-color: transparent !important;
-    padding-top: 0rem;
-  }
+#bigCollapse2{
+  padding: 32px;
+}
+#overlay{
+  background-color: transparent !important;
+  padding-top: 0rem;
+}
   
-  #outsideBox{
-    margin-bottom: 0px;
-    margin-top: 0px;
-  }
+#outsideBox{
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
   
-  /* .carousel-control-prev-icon{
-    text-shadow: 0 1px 2px rgb(0 0 0 / 60%);
-    background-color: rgba(0,0,0,0);
-    filter: alpha(opacity=50);
-    opacity: .5;
-    background-image: linear-gradient(to right,rgba(0,0,0,.0001) 0,rgba(0,0,0,.5) 100%);
-  } */
+/* .carousel-control-prev-icon{
+  text-shadow: 0 1px 2px rgb(0 0 0 / 60%);
+  background-color: rgba(0,0,0,0);
+  filter: alpha(opacity=50);
+  opacity: .5;
+  background-image: linear-gradient(to right,rgba(0,0,0,.0001) 0,rgba(0,0,0,.5) 100%);
+} */
 
-  .padded-pipe{
-      color: #49D4A0;
-  }
-  #site-btn{
-    margin-left: 30%;
-    margin-bottom: 20px;
-  }
+.padded-pipe{
+  color: #49D4A0;
+}
+#site-btn{
+  margin-left: 30%;
+  margin-bottom: 20px;
+}
  
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -282,130 +266,130 @@ body {
 
 
 .card {
-    width: 300px;
-    height: 290px;
-    padding: 0;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
-    border-radius: 8px;
-    box-sizing: border-box;
-    overflow: hidden;
-    margin: 20px;
-  }
-  #quikCard{
-      height: 255px;
-  }
+  width: 300px;
+  height: 290px;
+  padding: 0;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
+  border-radius: 8px;
+  box-sizing: border-box;
+  overflow: hidden;
+  margin: 20px;
+}
+#quikCard{
+  height: 255px;
+}
   
-  .card * {
-    transition: 0.3s ease all;
-  }
+.card * {
+  transition: 0.3s ease all;
+}
   
-  .card img {
-    margin: 0;
-    /* width: 360px; */
-    height: 224px;
-    object-fit: cover;
-    display: block;
-  }
+.card img {
+  margin: 0;
+  /* width: 360px; */
+  height: 224px;
+  object-fit: cover;
+  display: block;
+}
 
-  .card col{
-      padding-right:0px !important;
-      padding-left:0px !important;
-  }
+.card col{
+  padding-right:0px !important;
+  padding-left:0px !important;
+}
   
-  .card h3 {
-    margin: 0;
-    padding: 12px 12px 48px;
-    line-height: 32px;
-    font-weight: 500;
-    font-size: 20px;
-  }
+.card h3 {
+  margin: 0;
+  padding: 12px 12px 48px;
+  line-height: 32px;
+  font-weight: 500;
+  font-size: 20px;
+}
   
-  .card .focus-content {
-    display: block;
-    padding: 8px 12px;
-  }
-  
-  .card p {
-    margin: 0;
-    line-height: 1.5;
-  }
-  
-  .card:hover img, .card:focus-within img {
-    margin-top: -80px;
-  }
-  
-  .card:hover h3, .card:focus-within h3 {
-    padding: 8px 12px 0;
-  }
-  #spaceTop{
-      padding-top: 6px;
-  }
-  .button-swing {
-    color: #65b5f6;
-    background-color: transparent;
-    border: 1px solid #65b5f6;
-    border-radius: 4px;
-    padding: 0 16px;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-    margin: 10px;
-  }
-  
-  .button-swing:hover {
-    animation: swing 1s ease;
-    animation-iteration-count: 1;
-  }
+.card .focus-content {
+  display: block;
+  padding: 8px 12px;
+}
 
-  @keyframes swing {
-    15% {
-      transform: translateX(5px);
-    }
-    30% {
-      transform: translateX(-5px);
-    }
-    50% {
-      transform: translateX(3px);
-    }
-    65% {
-      transform: translateX(-3px);
-    }
-    80% {
-      transform: translateX(2px);
-    }
-    100% {
-      transform: translateX(0);
-    }
+.card p {
+  margin: 0;
+  line-height: 1.5;
+}
+
+.card:hover img, .card:focus-within img {
+  margin-top: -80px;
+}
+
+.card:hover h3, .card:focus-within h3 {
+  padding: 8px 12px 0;
+}
+#spaceTop{
+  padding-top: 6px;
+}
+.button-swing {
+  color: #65b5f6;
+  background-color: transparent;
+  border: 1px solid #65b5f6;
+  border-radius: 4px;
+  padding: 0 16px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  margin: 10px;
+}
+
+.button-swing:hover {
+  animation: swing 1s ease;
+  animation-iteration-count: 1;
+}
+
+@keyframes swing {
+  15% {
+    transform: translateX(5px);
   }
-  .el {
-    transition: max-height 0.3s;
-    overflow: hidden;
-    max-height: 0;
+  30% {
+    transform: translateX(-5px);
   }
+  50% {
+    transform: translateX(3px);
+  }
+  65% {
+    transform: translateX(-3px);
+  }
+  80% {
+    transform: translateX(2px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+.el {
+  transition: max-height 0.3s;
+  overflow: hidden;
+  max-height: 0;
+}
   
-  .trigger:hover > .el {
-    max-height: var(--max-height);
-  }
-  .blur{
-    /* background-color: rgba(255, 255, 255, 0.3); */
-    -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  height: 100%;
-  }
-  .zoom-in-out-box {
-    margin: 24px;
-    width: 50px;
-    display: inline-flex;
-    animation: zoom-in-zoom-out 3s ease infinite;
-  }
+.trigger:hover > .el {
+  max-height: var(--max-height);
+}
+.blur{
+  /* background-color: rgba(255, 255, 255, 0.3); */
+  -webkit-backdrop-filter: blur(10px);
+backdrop-filter: blur(10px);
+height: 100%;
+}
+.zoom-in-out-box {
+  margin: 24px;
+  width: 50px;
+  display: inline-flex;
+  animation: zoom-in-zoom-out 3s ease infinite;
+}
   
-  @keyframes zoom-in-zoom-out {
-    0% {
-      transform: scale(1, 1);
-    }
-    50% {
-      transform: scale(1.5, 1.5);
-    }
-    100% {
-      transform: scale(1, 1);
-    }
+@keyframes zoom-in-zoom-out {
+  0% {
+    transform: scale(1, 1);
   }
+  50% {
+    transform: scale(1.5, 1.5);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
